--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ui-box-plus",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "It's ui-box with extras.",
-  "main": "lib/ui-box-plus.js",
+  "main": "lib/ui-box-plus.es.js",
   "module": "ui-box-plus",
   "types": "lib",
   "repository": "https://github.com/lvandergrient/ui-box-plus",
@@ -39,6 +39,7 @@
     "react": "^16.13.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.26.5",
+    "rollup-plugin-terser": "^7.0.0",
     "source-map-loader": "^1.0.2",
     "styled-components": "^5.1.1",
     "typescript": "^4.0.2",
